--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#dbc8a8">
 <link rel="stylesheet" href="styles.a162eaa4efb451c25b6d.css"></head>
 
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.3be7107eec5e3966b200.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.3711757c37a2ef75da99.js" defer></script></body>
+<script src="runtime.3be7107eec5e3966b200.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.1f55f1ab00e88da8512f.js" defer></script></body>
 
 </html>
