--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Ionic App</title>
+  <title>My Numerology</title>
 
   <base href="/"/>
 
@@ -24,6 +24,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.3be7107eec5e3966b200.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.5329233027a52a0929e6.js" defer></script></body>
+<script src="runtime.3be7107eec5e3966b200.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.55f706e051633811ba9b.js" defer></script></body>
 
 </html>
