--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#dbc8a8">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-N67ND1Y4RB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-N67ND1Y4RB');
+  </script>
+
 <link rel="stylesheet" href="styles.a162eaa4efb451c25b6d.css"></head>
 
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.3be7107eec5e3966b200.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.c3522bbe579727fd01d3.js" defer></script></body>
+<script src="runtime.22d91b0e526401e37453.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.0588e3923ff9d03b9b4b.js" defer></script></body>
 
 </html>
