--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>My Numerology</title>
+  <title>My Numerologysign</title>
 
   <base href="/"/>
 
@@ -18,7 +18,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#dbc8a8">
+  <meta name="theme-color" content="#0511f2">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-N67ND1Y4RB"></script>
@@ -27,12 +27,15 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
   </script>
-<link rel="stylesheet" href="styles.a767ff981963a9f5d19d.css"></head>
+
+  <!-- Razorpay checkout.js -->
+<link rel="stylesheet" href="styles.66c47a5121eb84fac876.css"></head>
 
 
 <body>
   <app-root></app-root>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.86e4ede2ac84b6fc5d26.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.b3053136ae447f36e023.js" defer></script></body>
+<script src="runtime.8d3a61bba7a63200b0b5.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.d1af082ed7ad4f2022fb.js" defer></script></body>
 
 </html>
