--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>My Numerologysign</title>
+  <title>My NumerologySign</title>
 
   <base href="/"/>
 
@@ -36,6 +36,6 @@
   <app-root></app-root>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.5c61b95ba298049908df.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.a09f4802f2d7baebfcbe.js" defer></script></body>
+<script src="runtime.8c2120db702cc765908d.js" defer></script><script src="polyfills.69d5c03af489e3778bca.js" defer></script><script src="main.6a498d09d3f773a51b78.js" defer></script></body>
 
 </html>
