--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     (function () {
       var options = {
         whatsapp: "+919767438869", // WhatsApp number
-        company_logo_url: "//static.whatshelp.io/img/flag.png", // URL of company logo (png, jpg, gif)
+        // company_logo_url: "//static.whatshelp.io/img/flag.png", // URL of company logo (png, jpg, gif)
         greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.", // Text of greeting message
         call_to_action: "Message us", // Call to action
         position: "right", // Position may be 'right' or 'left'
       };
-      var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+      var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
       var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
       s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
       var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
