--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
+
+    // gtag('config', 'G-N67ND1Y4RB');
   </script>
 
   <!-- Razorpay checkout.js -->
@@ -34,7 +36,7 @@
   <!-- <div id="g_id_onload" data-client_id="465768015910-60endnacenupu2fm85eqm3tfaapu8ecn.apps.googleusercontent.com"
     data-login_uri="https://your.domain/your_login_endpoint">
   </div> -->
-<link rel="stylesheet" href="styles.9d0ba3f014d7da8574cf.css"></head>
+<link rel="stylesheet" href="styles.5586a2355ebcee2ee859.css"></head>
 
 
 <body>
@@ -61,6 +63,6 @@
   <!-- /WhatsHelp.io widget -->
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.d5af30a5cbb20011cb96.js" defer></script><script src="polyfills.583ce99f420b3934860c.js" defer></script><script src="scripts.686e781cff0aa251a3ac.js" defer></script><script src="main.0d96627e58cb08fef1e4.js" defer></script></body>
+<script src="runtime.868f9e5d1ff8b449f380.js" defer></script><script src="polyfills.583ce99f420b3934860c.js" defer></script><script src="scripts.686e781cff0aa251a3ac.js" defer></script><script src="main.7813d0279d6406fee819.js" defer></script></body>
 
 </html>
