--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
   <!-- /WhatsHelp.io widget -->
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.868f9e5d1ff8b449f380.js" defer></script><script src="polyfills.583ce99f420b3934860c.js" defer></script><script src="scripts.686e781cff0aa251a3ac.js" defer></script><script src="main.7813d0279d6406fee819.js" defer></script></body>
+<script src="runtime.2589475b1d6feb08d64e.js" defer></script><script src="polyfills.583ce99f420b3934860c.js" defer></script><script src="scripts.686e781cff0aa251a3ac.js" defer></script><script src="main.029d1d8b45342dc7b0fa.js" defer></script></body>
 
 </html>
+
+<!-- Reference links:
+ - https://jasonwatmore.com/post/2020/09/21/angular-10-facebook-login-tutorial-example -->
